fix delete button alignment & focus

--- a/packages/delete-button/style.scss
+++ b/packages/delete-button/style.scss
@@ -10,14 +10,20 @@ $color-button-delete-background-hover: #d46060 !default;
   color: $color-button-delete;
   background-color: $color-button-delete-background;
   border-radius: 100%;
-  height: 20px;
-  width: 20px;
+  height: 18px;
+  width: 18px;
   padding: 0;
-  font-size: 14px;
-  line-height: 20px;
+  line-height: 18px;
+  text-align: center;
+  vertical-align: middle;
   border: none;
   outline: none;
-  
+  letter-spacing: -0.5px;
+
+  &:focus {
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1),0 0 6px rgba(0,0,0,.3);
+  }
+
   &:hover {
     color: $color-button-delete-hover;
     background-color: $color-button-delete-background-hover;
